--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <!-- .pf (enter) -->
     <div class="pf">
+        <h1>HEEJUN DESIGN</h1>
         <style>
+            @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate:ital@0;1&display=swap');
+
             /* ★ 추가 - *는, 전체선택자 - margin바깥여백과 padding안쪽여백 0으로 해주어 여백 초기화 */
             * {
                 margin: 0;
@@ -24,9 +27,9 @@
 
             .pf {
                 width: 600px;
-                margin: 100px auto; 
+                margin: 100px auto;
             }
-            
+
             .pf>div {
                 margin-bottom: 30px;
             }
@@ -36,7 +39,16 @@
                 border: 10px solid #fff box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
             }
 
-            box-sizing: border-box; 
+            h1 {
+                .julius-sans one-regular font-family: "Julius Sans One", sans-serif;
+                font: weight 400px;
+                font-style: normal;
+                margin-bottom: 50px; auto;
+                text-align: center;
+            }
+
+
+            box-sizing: border-box;
         </style>
         <!-- div>a>img -->
         <!-- # - 임시링크 -->
@@ -51,10 +63,6 @@
         <div><a href="#"><img src="./images/9.jpg" alt="9"></a></div>
         <div><a href="#"><img src="./images/10.jpg" alt="10"></a></div>
         <div><a href="#"><img src="./images/11.jpg" alt="11"></a></div>
-        <div><a href="#"><img src="./images/12.gif" alt="12"></a></div>
-        <div><a href="#"><img src="./images/13.jpg" alt="13"></a></div>
-        <div><a href="#"><img src="./images/14.jpg" alt="14"></a></div>
-        <div><a href="#"><img src="./images/15.jpg" alt="15"></a></div> 
     </div>
 </body>
 
