--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title> 고희준 - 포토샵 </title>
+    <title> 고희준 - 포토샵,일러스트 </title>
 </head>
 <!-- 초기화 -->
 
 <body>
     <!-- .pf (enter) -->
     <div class="pf">
-        <h1>HEEJUN DESIGN</h1>
-        <style>
+        <h1><strong>heejun</strong></h1>
+            <style>
             @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate:ital@0;1&display=swap');
 
             /* ★ 추가 - *는, 전체선택자 - margin바깥여백과 padding안쪽여백 0으로 해주어 여백 초기화 */
@@ -36,7 +36,7 @@
 
             .pf img {
                 width: 600px;
-                border: 10px solid #fff box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+                border: 150px solid #fff box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
             }
 
             h1 {
@@ -63,6 +63,11 @@
         <div><a href="#"><img src="./images/9.jpg" alt="9"></a></div>
         <div><a href="#"><img src="./images/10.jpg" alt="10"></a></div>
         <div><a href="#"><img src="./images/11.jpg" alt="11"></a></div>
+        <div><a href="#"><img src="./images/12.gif" alt="12"></a></div>
+        <div><a href="#"><img src="./images/13.jpg" alt="13"></a></div>
+        <div><a href="#"><img src="./images/14.jpg" alt="14"></a></div>
+        <div><a href="#"><img src="./images/15.jpg" alt="15"></a></div>
+        <div><a href="#"><img src="./images/16.jpg" alt="15"></a></div>
     </div>
 </body>
 
